[gd_scene load_steps=7 format=2]

[ext_resource path="res://Bomb.gd" type="Script" id=1]
[ext_resource path="res://assets/bomb_sprite.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 148, 161 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1036, 0, 148, 161 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "explode",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 40.8904

[node name="Bomb" type="Area2D" groups=[
"enemy",
]]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -3, 0 )
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 3 )
offset = Vector2( -2, -5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -7.41623, 12.7136 )
shape = SubResource( 4 )

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="ExplosionDurationTimer" type="Timer" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
